# gkecc

./: README.md  compute-class.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_cli.py  test_integration.py  test_main.py  test_validation.py
