[project]
name = "gkecc"
version = "0.1.0"
description = "Generate cost-optimised GKE ComputeClass specs from GCP pricing API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-billing>=1.17.0",
    "google-cloud-compute>=1.20.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
gkecc = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
